[gd_scene load_steps=54 format=3 uid="uid://cev8bjl6bm512"]

[ext_resource type="Script" uid="uid://dqhbjdsbd76h1" path="res://Scene/knight.gd" id="1_a64jx"]
[ext_resource type="Texture2D" uid="uid://cy5t5i71kclvr" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Attack02.png" id="2_bhppu"]
[ext_resource type="Texture2D" uid="uid://d3so0wlekw4i3" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Attack01.png" id="3_d5oxa"]
[ext_resource type="Texture2D" uid="uid://dcvvv458t82fa" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Hurt.png" id="4_qv655"]
[ext_resource type="Texture2D" uid="uid://ffhpxibjqyn4" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Death.png" id="5_fqi8a"]
[ext_resource type="Texture2D" uid="uid://b1bh48ydd7cm" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="6_8cacm"]
[ext_resource type="Texture2D" uid="uid://di8gdev86eut3" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Walk.png" id="7_iawwt"]
[ext_resource type="Texture2D" uid="uid://ci7pipsi4n07h" path="res://Animation/Tiny RPG Character Asset Pack v1.03 -Free Soldier&Orc/Characters(100x100)/Soldier/Soldier/Soldier-Attack03.png" id="8_rmgfd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tpw1y"]
atlas = ExtResource("2_bhppu")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aniq"]
atlas = ExtResource("2_bhppu")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnmm1"]
atlas = ExtResource("2_bhppu")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqleu"]
atlas = ExtResource("2_bhppu")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kd1n1"]
atlas = ExtResource("2_bhppu")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sroir"]
atlas = ExtResource("2_bhppu")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfjrp"]
atlas = ExtResource("3_d5oxa")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rxpj"]
atlas = ExtResource("3_d5oxa")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aa01s"]
atlas = ExtResource("3_d5oxa")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_aprvr"]
atlas = ExtResource("3_d5oxa")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jnrw"]
atlas = ExtResource("3_d5oxa")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbkep"]
atlas = ExtResource("3_d5oxa")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fim2p"]
atlas = ExtResource("4_qv655")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6irsf"]
atlas = ExtResource("4_qv655")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kq0eg"]
atlas = ExtResource("4_qv655")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugu8i"]
atlas = ExtResource("4_qv655")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxb1m"]
atlas = ExtResource("5_fqi8a")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fh8wp"]
atlas = ExtResource("5_fqi8a")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bp45c"]
atlas = ExtResource("5_fqi8a")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh8tt"]
atlas = ExtResource("5_fqi8a")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx71k"]
atlas = ExtResource("6_8cacm")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsur2"]
atlas = ExtResource("6_8cacm")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7a7f"]
atlas = ExtResource("6_8cacm")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1w7p4"]
atlas = ExtResource("6_8cacm")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bg66"]
atlas = ExtResource("6_8cacm")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gsjs"]
atlas = ExtResource("6_8cacm")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdrj4"]
atlas = ExtResource("7_iawwt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntgof"]
atlas = ExtResource("7_iawwt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rqlpn"]
atlas = ExtResource("7_iawwt")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3lhs"]
atlas = ExtResource("7_iawwt")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsblo"]
atlas = ExtResource("7_iawwt")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yowld"]
atlas = ExtResource("7_iawwt")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oos3a"]
atlas = ExtResource("7_iawwt")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v272i"]
atlas = ExtResource("7_iawwt")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5rqg"]
atlas = ExtResource("8_rmgfd")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v5b4"]
atlas = ExtResource("8_rmgfd")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh55j"]
atlas = ExtResource("8_rmgfd")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l10fl"]
atlas = ExtResource("8_rmgfd")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_05wgd"]
atlas = ExtResource("8_rmgfd")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5jbr"]
atlas = ExtResource("8_rmgfd")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q60xk"]
atlas = ExtResource("8_rmgfd")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_666d5"]
atlas = ExtResource("8_rmgfd")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kti4a"]
atlas = ExtResource("8_rmgfd")
region = Rect2(800, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_2hqsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpw1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aniq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnmm1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqleu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kd1n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sroir")
}],
"loop": true,
"name": &"kinght-second-attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.2,
"texture": SubResource("AtlasTexture_jfjrp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rxpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aa01s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aprvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jnrw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbkep")
}],
"loop": false,
"name": &"knight-Attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fim2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6irsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq0eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugu8i")
}],
"loop": true,
"name": &"knight-Hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxb1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fh8wp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bp45c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh8tt")
}],
"loop": false,
"name": &"knight-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx71k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsur2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7a7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1w7p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bg66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gsjs")
}],
"loop": true,
"name": &"knight-idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdrj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntgof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rqlpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3lhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsblo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yowld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oos3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v272i")
}],
"loop": true,
"name": &"knight-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5rqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v5b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh55j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l10fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_05wgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5jbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q60xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_666d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kti4a")
}],
"loop": true,
"name": &"knight-third-attack",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dix1s"]
size = Vector2(16.75, 18.125)

[node name="Knight" type="CharacterBody2D"]
visibility_layer = 3
z_index = -1
position = Vector2(0, -160)
collision_mask = 47
script = ExtResource("1_a64jx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, 0)
sprite_frames = SubResource("SpriteFrames_2hqsf")
animation = &"knight-death"
autoplay = "knight-idle"
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, -4)
zoom = Vector2(1.5, 1.5)
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0.625, -1.9375)
shape = SubResource("RectangleShape2D_dix1s")
metadata/_edit_lock_ = true

[node name="DamageR" type="RayCast2D" parent="."]
target_position = Vector2(15, -1)
collision_mask = 4
metadata/_edit_lock_ = true

[node name="DamageL" type="RayCast2D" parent="."]
target_position = Vector2(-14, 0)
collision_mask = 4
metadata/_edit_lock_ = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
